# openwrt

./: bak.config  dd.config  jdwx-zbt.config
package/base-files/files/etc/: banner  shadow
package/base-files/files/etc/init.d/: system
package/mypkg/for-exe/: CMakeLists.txt  Makefile
package/mypkg/for-exe/files/: for-exe  for-exe.init
package/mypkg/for-exe/src/: CMakeLists.txt  for-exe.c  for-exe.h
package/mypkg/frpc/: Makefile
package/mypkg/frpc/files/: frpc.ini  frpc.init
package/mypkg/gateway-gset/: CMakeLists.txt  Makefile
package/mypkg/gateway-gset/files/: gateway-gset.conf  gateway-gset.init
package/mypkg/gateway-gset/src/: CMakeLists.txt  gateway-gset.c  gateway-gset.h
package/mypkg/gateway-plc/: CMakeLists.txt  Makefile
package/mypkg/gateway-plc/files/: gateway-plc.conf  gateway-plc.init
package/mypkg/gateway-plc/src/: CMakeLists.txt  gateway-plc.c  gateway-plc.h
package/mypkg/gateway-rms/: CMakeLists.txt  Makefile
package/mypkg/gateway-rms/files/: gateway-rms.conf  gateway-rms.init
package/mypkg/gateway-rms/src/: CMakeLists.txt  gateway-rms.c  gateway-rms.h
package/mypkg/libs/c-ares/: Makefile
package/mypkg/libs/libdill/: Makefile
package/mypkg/libs/libestr/: Makefile
package/mypkg/libs/libmacorgn/: Makefile
package/mypkg/libs/libpcre/: Makefile
package/mypkg/libs/libwebsockets/: Makefile
package/mypkg/libs/libwl/: CMakeLists.txt  Makefile
package/mypkg/libs/libwl/include/: libwl_alist_pub.h  libwl_api_pub.h  libwl_dbg_pub.h  libwl_mscan_pub.h
package/mypkg/libs/libwl/src/: CMakeLists.txt  libw_alist.c  libwl_alist.c  libwl_alist.h  libwl_api.c  libwl_api.h  libwl_dbg.c  libwl_dbg.h
package/mypkg/loadbalance/: CMakeLists.txt  Makefile
package/mypkg/loadbalance/files/: loadbalance  loadbalance.init
package/mypkg/loadbalance/src/: CMakeLists.txt  ap_loadbalance.c  ap_loadbalance.h
package/mypkg/luci/: ChangeLog  luci.mk
package/mypkg/luci/applications/luci-app-6box/: Makefile
package/mypkg/luci/applications/luci-app-adbyby/: Makefile
package/mypkg/luci/applications/luci-app-aisino/: Makefile
package/mypkg/luci/applications/luci-app-apfree_wifidog/: Makefile
package/mypkg/luci/applications/luci-app-base/: Makefile
package/mypkg/luci/applications/luci-app-kcptun/: Makefile
package/mypkg/luci/applications/luci-app-loadbalance/: Makefile
package/mypkg/luci/applications/luci-app-oray/: Makefile
package/mypkg/luci/applications/luci-app-saastree/: Makefile
package/mypkg/luci/applications/luci-app-samba/: Makefile
package/mypkg/luci/applications/luci-app-sellon/: Makefile
package/mypkg/luci/applications/luci-app-shadowsocks/: Makefile
package/mypkg/luci/applications/luci-app-shadowsocks/src/: Makefile  luci-base64.c
package/mypkg/luci/applications/luci-app-sysupgrade/: Makefile
package/mypkg/luci/applications/luci-app-timesheet/: Makefile
package/mypkg/luci/applications/luci-app-vsftpd/: Makefile
package/mypkg/luci/applications/luci-app-wechat/: Makefile
package/mypkg/luci/collections/luci/: Makefile
package/mypkg/luci/collections/luci-ssl/: Makefile
package/mypkg/luci/collections/luci-ssl-lede/: Makefile
package/mypkg/luci/libs/luci-lib-aes/: Makefile
package/mypkg/luci/modules/luci-base/: Makefile
package/mypkg/luci/modules/luci-base/luasrc/: dispatcher.lua  i18n.lua
package/mypkg/luci/modules/luci-base/po/en/: base.po
package/mypkg/luci/modules/luci-base/po/zh-cn/: base.po
package/mypkg/luci/modules/luci-mod-admin/: Makefile
package/mypkg/luci/modules/luci-mod-admin/htdocs/: index.html
package/mypkg/luci/modules/luci-mod-admin/luasrc/: kt_uci_api.lua  log.lua
package/mypkg/luci/modules/luci-mod-admin/src/: Makefile
package/mypkg/luci/modules/luci-mod-brain/: Makefile
package/mypkg/luci/modules/luci-mod-brain/htdocs/: index.html
package/mypkg/luci/modules/luci-mod-brain/src/: luci-bwc.c
package/mypkg/luci/modules/luci-mod-chaoscalmer/: Makefile
package/mypkg/luci/modules/luci-mod-chaoscalmer/luasrc/: dispatcher.lua
package/mypkg/luci/modules/luci-mod-openwrt/htdocs/: index.html
package/mypkg/luci/oem/luci-oem-bangongyi/: Makefile
package/mypkg/luci/oem/luci-oem-kunteng/: Makefile
package/mypkg/luci/oem/luci-oem-mexio/: Makefile
package/mypkg/mac-onoffline/: CMakeLists.txt  Makefile
package/mypkg/mac-onoffline/files/: mac-onoffline  mac-onoffline.init
package/mypkg/mac-onoffline/src/: CMakeLists.txt  mac_onoffline.c  mac_onoffline.h
package/mypkg/macscan/: CMakeLists.txt  Makefile
package/mypkg/macscan/files/: macscan.conf  macscan.init
package/mypkg/macscan/src/: CMakeLists.txt  macscan.c  macscan.h
package/mypkg/mosquitto/: Makefile
package/mypkg/mosquitto/files/: ca.crt  mosquitto.config  mosquitto.init  mosquitto.uci.convert
package/mypkg/mqtt-client/: CMakeLists.txt  Makefile
package/mypkg/mqtt-client/files/: blist.sh  checkpasswd  kt_wireless_op.lua  mqtt-client  mqtt-client.conf  mqtt-client.init  qos_opt.lua  setpasswd  wanset.lua
package/mypkg/mqtt-client/src/: CMakeLists.txt  Makefile  base64.c  base64.h  cmd_exe.c  cmd_exe.h  cmd_get.c  cmd_get.h  common.c  common.h  ktmarket.c  ktmarket.h  log.c  mqtt-client.c  mqtt-client.h  set_sync_task.c  set_sync_task.h  sys_task.c  sys_task.h  utils.c  utils.h
package/mypkg/mqtt_dog/: Makefile
package/mypkg/own-base-files/: Makefile
package/mypkg/own-base-files/files/: checkwan.sh  firmwareinfo  firstboot.init  makeversioninfo.sh  procwatchdog.sh  root
package/mypkg/plc-gateway/: CMakeLists.txt  Makefile
package/mypkg/plc-gateway/files/: plc-gateway  plc-gateway.init
package/mypkg/plc-gateway/src/: CMakeLists.txt  plc-gateway.c  plc-gateway.h
package/mypkg/quectel-CM/: Makefile
package/mypkg/quectel-CM/files/: firstboot.init  network-wwan.init  quectel-CM.conf  quectel-CM.init
package/mypkg/quectel-CM/src/: GobiNetCM.c  QMIThread.c  QmiWwanCM.c  main.c  udhcpc.c
package/mypkg/rsyslog/: Makefile
package/mypkg/rsyslog/files/: rsyslog.conf  rsyslog.init
package/network/services/dnsmasq/files/: dhcp.conf
(+162 files in other folders)
